--- a/client/index.html
+++ b/client/index.html
@@ -43,14 +43,14 @@
     <br>
     <br>
     <div id="negociacoes-view">
-        
+
     </div>
     
     <script src="js/shorts.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
     <script src="js/app/helpers/DateHelper.js"></script>
-    <script src="js/app/models/ListaNegociacoes.js"></script>
+    <script src="js/app/models/Lista.js"></script>
     <script src="js/app/views/NegociacoesView.js"></script>
     <script>
         let negociacaoController = new NegociacaoController();
