--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
         <button class="btn btn-primary text-center" type="button">
             Importar Negociações
         </button>
-        <button class="btn btn-primary text-center" type="button">
+        <button onclick="negociacaoController.apaga()" class="btn btn-primary text-center" type="button">
             Apagar
         </button>
     </div> 
@@ -48,6 +48,7 @@
     
     <script src="js/shorts.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
+    <script src="js/app/models/Lista.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
     <script src="js/app/helpers/DateHelper.js"></script>
     <script src="js/app/views/View.js"></script>
