serviços, requisições com ajax, objeto xml, error first callback

--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
     </form>
     
     <div class="text-center">
-        <button class="btn btn-primary text-center" type="button">
+        <button class="btn btn-primary text-center" id="importa-negociacoes" type="button">
             Importar Negociações
         </button>
         <button class="btn btn-primary text-center botao-apagar" type="button">
@@ -50,14 +50,15 @@
     <script src="js/shorts.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/models/Lista.js"></script>
+    <script src="js/app/models/Mensagem.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
     <script src="js/app/views/View.js"></script>
     <script src="js/app/views/NegociacoesView.js"></script>
-    <script src="js/app/helpers/DateHelper.js"></script>
-    <script src="js/app/models/Mensagem.js"></script>
     <script src="js/app/views/MensagemView.js"></script>
-    <script src="js/app/services/ProxyFactory.js"></script>
+    <script src="js/app/helpers/DateHelper.js"></script>
     <script src="js/app/helpers/Bind.js"></script>
+    <script src="js/app/services/ProxyFactory.js"></script>
+    <script src="js/app/services/negociacaoService.js"></script>
     <script src="js/rodar.js"></script>
     <!--<script>
         
