promises, resolvendo callback hell e piramid of doom

--- a/client/index.html
+++ b/client/index.html
@@ -58,7 +58,9 @@
     <script src="js/app/helpers/DateHelper.js"></script>
     <script src="js/app/helpers/Bind.js"></script>
     <script src="js/app/services/ProxyFactory.js"></script>
+    <script src="js/app/services/HttpService.js"></script>
     <script src="js/app/services/negociacaoService.js"></script>
+    
     <script src="js/rodar.js"></script>
     <!--<script>
         
